# Mathematics

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Math.cpp  Math.h  README.md
LinAlg/: CMakeLists.txt
LinAlg/include/: LinAlg.h  Tensor.h
LinAlg/src/: Tensor.cpp
Test/: CMakeLists.txt
Test/Utils/src/: ComplexTest.cpp
Utils/: CMakeLists.txt
Utils/include/: Complex.h  Error.h  Types.h  Utils.h
Utils/src/: Complex.cpp
